编译优化，修复bug

--- a/软件使用手册.md
+++ b/软件使用手册.md
@@ -1,121 +1,73 @@
 
-# SafeDraft 用户使用手册
 
-**版本**：1.0
+# SafeDraft 使用手册 (v1.1 修正版)
+
 **核心理念**：无感记录、瞬间回溯、永不丢失。
-
----
 
 ## 1. 产品简介
 
-SafeDraft 是一款专为消除“打字一小时，崩溃全白忙”焦虑而生的系统级输入保险箱。它默默在后台运行，实时记录您的每一次思维片段。无论遭遇软件崩溃、断电还是误操作，您都可以在 SafeDraft 中找回丢失的文字。
+SafeDraft 是一款系统级输入保险箱。它在后台实时记录您的每一次键盘输入，通过毫秒级本地持久化技术，确保在软件崩溃、系统闪退或断电时，您的文字依然安全。
 
-它不仅仅是一个记事本，更是您的**输入安全气囊**。
+## 2. 界面功能分区
 
----
-
-## 2. 快速入门
-
-### 2.1 安装与运行
-SafeDraft 为绿色免安装软件。
-1.  下载 `SafeDraft.exe`。
-2.  建议将其放置在一个固定的文件夹中（因为数据库文件 `safedraft.db` 会生成在同级目录下）。
-3.  双击运行即可。
-
-### 2.2 界面概览
-* **主输入区**：极简的文本编辑框，支持 Markdown 风格输入。
+* **主输入区**：支持实时自动保存的 Markdown 编辑器。
 * **顶部工具栏**：
-    * `➕ 新建`：打开一个新的独立输入窗口。
-    * `💾 保存并清空`：将当前内容归档并清空屏幕，准备开始下一段写作。
-    * `⚙️ 设置`：配置监控规则、外观和系统行为。
-    * `📌 临时置顶`：手动强制窗口最前（蓝色状态）；自动弹出时为倒计时模式（橙色状态）。
-    * `🕒 时光机`：查看、搜索和恢复历史记录。
+* `➕ 新建`：多窗口并行输入，所有窗口共享同一个数据库连接。
+* `💾 保存`：将当前内容创建历史快照并清空界面。
+* `☁️⬆️/⬇️`：（需配置）与远程服务器同步数据库。
+* `⚙️ 设置`：管理感知规则、主题（Deep/Light）及透明度。
+* `📌 状态灯`：蓝色表示手动锁定置顶；橙色表示智能弹出后的 2 分钟临时置顶。
+
+
+* **右侧入口**：
+* `📓 笔记`：进入专业笔记管理系统。
+* `🕒 历史归档`：进入“时光机”数据恢复中心。
+
+
+
+## 3. 核心进阶功能
+
+### 3.1 📂 笔记管理系统 (Notebook)
+
+代码现已包含完整的三栏式笔记库：
+
+* **文件夹管理**：支持创建、重命名文件夹，并可选择在删除文件夹时保留或清理内部笔记。
+* **双向联动**：在“时光机”中发现有价值的片段，可点击 `⭐ 存笔记` 直接转存至指定目录。
+* **安全回收站**：删除的笔记会进入回收站，支持一键还原或彻底粉碎。
+
+### 3.2 🕒 时光机与数据优化
+
+* **智能去重**：点击 `🧹 去重` 按钮，系统会自动扫描数据库并删除内容完全重复的冗余记录，仅保留最新一条。
+* **快速恢复**：支持勾选“双击直接恢复”，无需确认弹窗即可覆盖主视图内容。
+
+### 3.3 ☁️ 服务器同步 (SSH/SCP)
+
+针对多设备用户，可通过 `⚙️ 设置 -> 服务器同步` 配置：
+
+* 支持通过 SSH 协议将本地 `safedraft.db` 上传至 Linux 服务器。
+* 支持从服务器拉取覆盖本地，实现异地办公的数据同步。
+* **注意**：需提前配置 SSH 免密登录（公钥授权）。
+
+### 3.4 智能感知逻辑
+
+系统通过 `WindowWatcher` 模块监控前台窗口：
+
+* **匹配规则**：支持“应用进程名”和“窗口标题关键词”两种模式。
+* **防干扰机制**：当用户切换到 SafeDraft 自身窗口进行操作时，监控器会锁定状态，确保切回原应用时不会因重复触发而打断思路。
+
+## 4. 快捷键指南 (基于源码实现)
+
+| 功能 | 快捷键 | 备注 |
+| --- | --- | --- |
+| **快速唤起/隐藏** | `Ctrl + ~` | 全局有效，若失效请尝试管理员身份运行 |
+| **创建快照** | `Ctrl + S` | 在 SafeDraft 窗口内，单独保存副本而不中断输入 |
+| **强制保存** | `Ctrl + S` | 在笔记系统内，触发立即保存 |
+
+## 5. 存储安全
+
+* **本地存储**：数据保存在 `safedraft.db` (SQLite)。
+* **自动分块**：系统默认以 10 分钟为间隔自动切割记录，防止单一条目过大。
 
 ---
 
-## 3. 核心功能详解
-
-### 3.1 智能感知与自动弹出
-SafeDraft 会监控您当前正在使用的应用程序。
-* **触发机制**：当您打开特定的应用（如 Word, WPS, 飞书）或浏览特定的网页（如 ChatGPT, Claude, Gemini）时，SafeDraft 会自动弹出。
-* **自动置顶**：弹出时，窗口会自动置顶 **2分钟**（按钮显示橙色），方便您对照输入。2分钟后自动取消置顶，避免遮挡视线。
-* **防打扰**：如果您一直在同一个应用内工作，SafeDraft 不会重复弹出干扰您。
-
-### 3.2 无感自动保存
-* **机制**：只要您在 SafeDraft 中打字，内容就会被毫秒级实时保存到本地数据库。
-* **逻辑**：无需手动按保存键。即使直接强制关闭软件或电脑断电，再次打开时，最后输入的内容依然存在。
-
-### 3.3 两种保存模式
-1.  **自动流式记录**：您只管打字，系统会根据时间间隔（10分钟）自动切分记录块。
-2.  **快照保存 (`Ctrl + S`)**：在输入过程中按下快捷键，系统会**单独**保存当前内容的副本作为一条历史记录，**且不影响您正在进行的输入**。这适合在修改重要段落前留一个“备份”。
-
-### 3.4 💾 保存并清空
-当您完成了一段内容的创作并将其复制到了目标软件（如发送给了 AI），可以点击此按钮。
-* **效果**：当前内容被强制归档到历史记录，输入框被清空。
-* **目的**：让您始终在一个干净的界面开始新的话题。
-
----
-
-## 4. 时光机 (Time Machine)
-
-点击主界面的 `🕒 时光机` 按钮打开历史归档窗口。
-
-* **搜索**：在顶部搜索栏输入关键词，实时筛选历史记录。
-* **预览**：列表显示记录的生成时间和前 30 个字的预览。
-* **恢复**：
-    * **双击**某条记录，将其内容覆盖回主输入框（可在设置中关闭确认弹窗）。
-* **删除**：选中一条记录，点击底部“删除选中”可永久移除。
-
----
-
-## 5. 个性化设置
-
-点击 `⚙️ 设置` 进入配置面板。
-
-### 5.1 监控规则
-您可以自定义 SafeDraft 需要在哪些场景下自动弹出：
-* **添加应用**：点击“选择应用 (.exe)”，选择如 `Notion.exe` 或 `Discord.exe`。
-* **添加网址/标题**：输入浏览器标题栏包含的关键词，例如 `知乎` 或 `Github`。
-
-### 5.2 常规设置
-* **全局快捷键**：默认显示为 `Ctrl + ~` (波浪号键)，用于快速呼出/隐藏主窗口。
-* **开机启动**：勾选后，软件随 Windows 启动并最小化到托盘。
-* **界面主题**：提供 `Deep` (深色极客模式) 和 `Light` (浅色办公模式)。
-* **窗口透明度**：拖动滑块调整主窗口透明度，实现“透视”效果。
-* **字体大小**：调整输入区和历史列表的字体大小，适应不同视力需求。
-* **关闭主窗口时**：
-    * *每次询问*：弹窗确认。
-    * *最小化到托盘*：保持后台运行（推荐）。
-    * *退出程序*：彻底关闭。
-
----
-
-## 6. 快捷键指南
-
-| 功能 | 快捷键 | 作用范围 |
-| :--- | :--- | :--- |
-| **快速呼出/隐藏** | `Ctrl + ~` (Esc下方键) | **全局** (在任何软件界面均有效) |
-| **创建快照** | `Ctrl + S` | 仅在 SafeDraft 窗口内有效 |
-| **恢复历史** | 双击历史记录项 | 时光机窗口内 |
-
----
-
-## 7. 常见问题 (FAQ)
-
-**Q: 为什么按全局快捷键 `Ctrl+~` 没反应？**
-A: 如果您当前聚焦的软件（如任务管理器）是以“管理员身份”运行的，而 SafeDraft 是普通权限，Windows 会屏蔽快捷键。
-* **解决方法**：右键 `SafeDraft.exe` -> 属性 -> 兼容性 -> 勾选**“以管理员身份运行此程序”**。
-
-**Q: 为什么我在浏览器打开了 Gemini，软件没弹出？**
-A: 请检查设置中的“监控规则”。如果列表中没有 `Gemini`，请手动添加该关键词。软件是通过匹配窗口标题栏文字来工作的。
-
-**Q: 我的数据保存在哪里？安全吗？**
-A: 所有数据存储在软件同级目录下的 `safedraft.db` 文件中（SQLite 格式）。数据完全**本地化**，不上传任何云端，请放心使用。如果您要迁移软件，请务必带上这个 `.db` 文件。
-
-**Q: 图标在任务栏显示模糊怎么办？**
-A: 软件已内置高 DPI 适配。如果在某些旧版系统显示异常，请尝试在 exe 属性中更改“高 DPI 设置”。
-
----
-
-**SafeDraft**
-*让输入更安全，让灵感不流失。*
+**SafeDraft** - *Secure your input, capture your inspiration.*
